--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -14,8 +14,7 @@
 @import "base/mixins";
 
 html {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   background: $background;
 }
 
@@ -26,4 +25,14 @@ html {
   justify-content: center;
   font-size: 10rem;
   flex-flow: column;
+}
+
+.chat {
+  width: 100px;
+  height: 100px;
+  background-color: #eb6440;
+  border-radius: 50%;
+  position: fixed;
+  bottom: 0;
+  right: 0;
 }
